# tradingview

./: .gitignore  README-zh.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
commands/: alerts.md  chart-state.md  kline.md  launch.md  login-email.md  login-interactive.md  login.md  news.md  options-chain.md  options-expiries.md  preflight.md  quote.md  screener.md  screenshot.md  search.md  status.md  stop.md  watchlists.md
docs/superpowers/plans/: 2026-05-26-tradingview-proxy-user-config.md
docs/superpowers/specs/: 2026-05-26-tradingview-proxy-parameters-design.md
hooks/: hooks.json  session_start.sh
monitors/: monitors.json
scripts/: pyproject.toml  tradingview.py
scripts/tests/: test_plugin.py  tmux_host_acceptance.py
scripts/tradingview_cli/: __init__.py  browser.py  client.py  commands.py  indicators.py  main.py  monitor.py  paths.py  settings.py
skills/news-research/: SKILL.md
skills/options-analysis/: SKILL.md
skills/screener/: SKILL.md
skills/tradingview/: SKILL.md
