[project]
name = "tradingview-cli"
version = "0.1.0"
description = "TradingView browser automation CLI for Claude Code and Codex plugins"
requires-python = ">=3.11"
dependencies = [
    "pydoll-python>=0.9.0",
    "httpx>=0.27.0",
    "socksio>=1.0.0",
    "websockets>=13.0",
]

[project.scripts]
tradingview = "tradingview_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tradingview_cli"]
